[project]
name = "langchain-ch2-reactagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
